# Neurochain-DSL-Website

./: .gitignore  Cargo.toml  NOTICE  README.md
.github/workflows/: ci.yml  release_sha256sums.yml
contracts/CBLFA6FCYHI7RN3MMTQJV5TUKEYECQJAUE74HD5ZJM4NXMHCN4OJKCIJ/: policy.json
docs/: getting_started.md  language.md  macros.md  models.md  security.md  stellar_actions_guide.md  troubleshooting.md
examples/: distilbert-sst2check.nc  error_undefined_variable.nc  factcheck.nc  golden_path_model_agnostic.nc  golden_path_model_agnostic_blocked.nc  intent_stellar_comprehensive_test.nc  intent_stellar_payment_flow.nc  intent_stellar_policy_typed_slot_error.nc  intent_stellar_policy_typed_slot_ok.nc  intent_stellar_policy_typed_stage2_demo_policy.json  intent_stellar_policy_typed_stage2_normalize.nc  intent_stellar_random_adversarial.nc  intent_stellar_smoke.nc  intent_stellar_typed_template_stage3_error.nc  intent_stellar_typed_template_stage3_ok.nc  intentcheck.nc  macro_test.nc  macro_test_edge.nc  macro_test_multimodel.nc  macro_test_random.nc  macro_test_robust.nc  macro_test_semantics.nc  multi_model_if_payment.nc  soroban_hello_invoke.nc  stellar_actions_example.nc  stellar_testasset_issue.nc  stellar_testasset_payment.nc  stellar_testasset_trustline.nc  stellar_testasset_user_payment.nc  stellar_testasset_user_trustline.nc  test_full_logic.nc  toxiccheck.nc
hackathons/stellar-real-world-zk/fixtures/: groth16_approved.json  groth16_blocked_exit_3.json  groth16_requires_approval.json  journal_approved.json  journal_blocked_exit_3.json  (+9 more)
models/: LICENSE  README.md  THIRD_PARTY_NOTICES.md  manifest.json
models/distilbert-sst2/: README.md
models/factcheck/: README.md
models/intent/: README.md
models/intent_macro/: README.md
models/intent_stellar/: README.md
models/toxic_quantized/: README.md
scripts/: fetch_models.ps1  fetch_models.sh  macro_test_log.sh
src/: actions.rs  banner.rs  engine.rs  help_text.rs  intent_stellar.rs  lib.rs  main.rs  soroban_deep.rs  x402_audit.rs  x402_facilitator.rs  x402_stellar.rs  x402_store.rs  zk_attestation.rs
src/ai/: model.rs
src/interpreter/: mod.rs  tests.rs
src/lexer/: mod.rs  tests.rs
src/parser/: mod.rs  tests.rs
stellarzerolab.art/: .htaccess  about.html  help.html  index.html  roadmap.html  snake.html  stellar-cli.html  webui.html
stellarzerolab.com/: 404.html  about.html  help.html  maintenance.html  roadmap.html  site.webmanifest  snake.html  stellar-cli.html
tests/: actions.rs  cli_meta.rs  dsl_semantics.rs  flow_cli.rs  intent_macro_golden.rs  intent_stellar_golden.rs  intent_stellar_golden2.rs  intent_stellar_golden3.rs  intent_stellar_pipeline.rs  intent_stellar_server_analyze.rs  server_analyze.rs  stellar_repl.rs  stellar_script.rs  strict_variable.rs
(+3 files in other folders)
