[package]
name         = "neurochain"
version      = "0.1.0"
edition      = "2021"
license      = "Apache-2.0"

[dependencies]
nom          = "7.1"
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
tract-onnx   = "0.21.13"
anyhow       = "1.0"
tokenizers   = { version = "0.19.1", default-features = false, features = ["onig", "esaxx_fast"] }
regex        = "1.10"
axum         = { version = "0.7", features = ["ws"] }
tokio        = { version = "1.37", features = ["full"] }
tower-http   = { version = "0.5", features = ["cors"] }
reqwest      = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[dev-dependencies]
assert_cmd   = "2"
predicates   = "3"
tempfile     = "3"
